# pyQuadp

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  build.sh  build_and_test.sh  coverage.sh  lint.sh  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: bandit.yml  black.yml  ci-mac.yml  ci-old.yml  ci.yml  cibuildwheel.yml  cibuildwheels.yml  codeql.yml  coveralls.yml  isort.yml  linux-arm.yml  linux.yml  macos.yml  mypy.yml  old-numpy.yml  pypi.yml  pypy.yml  windows.yml  zizmor.yml
pyquad/: __init__.py  constant.py  qcmath.c  qcmath.py  qcmathc.c  qcmathc.h  qcmplx.c  qcmplx.h  qdef.c  qdef.h  qfloat.c  qfloat.h  qimath.c  qint.c  qint.h  qmath.c  qmath.h  qmath.py  qmathc.c  qmathc.h
pyquadp/: __init__.py  __init__.pyi  constant.py  constant.pyi  pyquadp.h  qarray.pyi  qcarray.c  qcarray.h  qcarray.pyi  qcmath.py  qcmath.pyi  qcmathc.c  qcmathc.h  qcmplx.c  qcmplx.h  qfloat.c  qfloat.h  qfloatarray.c  qfloatarray.h  qiarray.c  qiarray.h  qiarray.pyi  qint.c  qint.h  qmath.py  qmath.pyi  qmathc.c  qmathc.h  qmcmplx.pyi  qmfloat.pyi  qmint.pyi  test.c
tests/: Makefile  conftest.py  fortran_test.py  import_order_test.py  qarray_test.py  qcarray_test.py  qcmath_test.py  qcmplx_test.py  qfloat_test.py  qiarray_test.py  qint_test.py  qmath_test.py  quad.f90
