[build-system]
# "numpy>=2.0,<3" not needed at the moment
requires = ["setuptools>=74.1.0", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "pyquadp"
description = "Python's bindings for gcc's libquadmath"

authors = [
    {name="Robert Farmer", email="robert.j.farmer37@gmail.com"}
]

dependencies =[
    "numpy",
]

readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/rjfarmer/pyquadp"

[project.optional-dependencies]
test = ['pytest','pytest-xdist[psutil]','hypothesis',"scipy"]
coverage = ['pytest', 'pytest-xdist[psutil]', 'pytest-cov',"scipy"]
dev = ['pre-commit','black', 'pytest','pytest-xdist[psutil]',"scipy"]
perfomance = ["pytest", "pytest-codspeed", 'pytest-xdist[psutil]',"scipy"]


[tool.pytest.ini_options]
addopts = "-s -n auto"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
source = ["pyQuadp"]
parallel = true
concurrency = ["multiprocessing", "thread"]


[tool.setuptools]
ext-modules = [
    {name='pyquadp.qmathc', sources=["pyquadp/qfloat.c", "pyquadp/qmathc.c"], libraries=['quadmath']},
    {name='pyquadp.qcmathc', sources=["pyquadp/qfloat.c", "pyquadp/qcmplx.c", "pyquadp/qcmathc.c"], libraries=['quadmath']},
    {name='pyquadp.qmfloat', sources=["pyquadp/qfloat.c"], libraries=['quadmath']},
    {name='pyquadp.qmcmplx', sources=["pyquadp/qfloat.c", "pyquadp/qcmplx.c"], libraries=['quadmath']},
    {name='pyquadp.qmint', sources=["pyquadp/qint.c"], libraries=['quadmath']},
#    {name='pyquadp.qarray', sources=["pyquadp/qfloatarray.c"], libraries=['quadmath']},
]
packages = ["pyquadp"]



[tool.cibuildwheel]
test-sources = ["tests"]
test-requires = ['pytest','pytest-xdist[psutil]','hypothesis',"scipy"]
test-command = "pytest {project}/tests"