[build-system]
requires = ["setuptools>=74.1.0", "wheel", "setuptools_scm[toml]>=8.0", "numpy>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "pyquadp"
description = "Python's bindings for gcc's libquadmath"

authors = [
    {name="Robert Farmer", email="robert.j.farmer37@gmail.com"}
]

dependencies =[
    "numpy <=2.5.0",
]

readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]

dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/rjfarmer/pyquadp"

[project.optional-dependencies]
test = ['pytest','pytest-xdist[psutil]','hypothesis',"scipy"]
coverage = ['pytest', 'pytest-xdist[psutil]', 'pytest-cov',"scipy"]
dev = ['pre-commit','black', 'pytest','pytest-xdist[psutil]',"scipy"]
perfomance = ["pytest", "pytest-codspeed", 'pytest-xdist[psutil]',"scipy"]


[tool.pytest.ini_options]
addopts = "-s -n auto"
testpaths = ["tests"]
markers = [
    "qarray: tests for NumPy-compatible quad array support",
    "qcarray: tests for NumPy-compatible quad complex array support",
    "qiarray: tests for NumPy-compatible quad int array support",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
source = ["pyQuadp"]
parallel = true
concurrency = ["multiprocessing", "thread"]


[tool.setuptools]
packages = ["pyquadp"]



[tool.cibuildwheel]
test-sources = ["tests"]
test-requires = ['pytest','pytest-xdist[psutil]','hypothesis',"scipy"]
test-command = "pytest {project}/tests"